2013-10-28  Andy Buckley  <andy.buckley@cern.ch>

	* tests/: adding testing of all available PDF sets' central info systems.

	* Factories.*: mkPDFInfo now returns PDFInfo* rather than Info*.

2013-10-18  Andy Buckley  <andy.buckley@cern.ch>

	* Adding OpenMP directives to all-flavour functions in PDF.h. I
	don't see a big speed difference in profiling, though: -Ofast
	gives a much bigger speed-up.

2013-10-10  Andy Buckley  <andy.buckley@cern.ch>

	* Small improvements to the banner messages when loading a whole PDF set.

2013-10-09  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.0.4 release.

	* Being a wee bit smart and dropping the verbosity level
	temporarily when loading a whole set, to avoid flooding the
	terminal.

	* Tweaking banner and PDF printouts.

	* Adding verbosity() and setVerbosity() functions.

2013-10-07 James Ferrando <james.ferrando@cern.ch>

	* Fixed handling of Fortran string-in-common-block objects in the initPDFSet routine

	* Added missing initPDFSet variants w.r.t. lhapdf5.

2013-10-07  Andy Buckley  <andy.buckley@cern.ch>

	* Adding banner printout if Verbosity > 0, and extra arg on
	print() methods.

	* More Cython mapping improvements -- PDFs can now return their
	parent set or info objects.

	* Improving error messages when PDF data files are not found.

	* Fixing various aspects of Info, PDFSet, PDFInfo mapping to Python.

	* src/LHAGlue.cc: Removing erroneous if "protection" blocks which
	broke PDF set re-initialisation.


2013-09-30  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.0.3 release.

2013-09-26  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing and extending Cython wrappers for Info and subclasses.

	* Adding print() and dataversion() functions on PDF and PDFSet.

2013-09-25  Andy Buckley  <andy.buckley@cern.ch>

	* Adding machinery for migration of the MRST2004qed set to creategrids.

	* Many improvements to creategrids correctness, efficiency, etc.

2013-09-23  Andy Buckley  <andy.buckley@cern.ch>
